<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".DeleteActivity">
    <EditText
        android:id="@+id/bin_location_input"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="580dp"
        android:autofillHints=""
        android:gravity="center_vertical"
        android:hint="@string/scan_bin_location"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />
    <Button
        android:id="@+id/delete_back_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="479dp"
        android:text="@string/insert_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="479dp"
        android:contentDescription="@string/InsertButton"
        android:gravity="center_horizontal"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000000"
        tools:ignore="MissingConstraints"
        tools:text="Insert"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-300dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="50dp"
        android:background="#000000"/>
</LinearLayout>