<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wms.eurotech.kondawms.CycleActivity">

    <EditText
        android:id="@+id/item_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="561dp"
        android:autofillHints=""
        android:gravity="center_vertical"
        android:hint="@string/scan_item_barcode"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />
    <Button
        android:id="@+id/cycle_back_id"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="-330dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="365dp"
        android:layout_marginBottom="479dp"
        android:text="@string/insert_back"
        app:layout_constraintBottom_toBottomOf="@id/recyclerList"
        app:layout_constraintEnd_toEndOf="@id/button_id3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bin_location_input"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_id3"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="-300dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="479dp"
        android:contentDescription="@string/InsertButton"
        android:gravity="center_horizontal"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@id/recyclerList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/cycle_back_id"
        app:layout_constraintTop_toTopOf="@id/item_input"
        app:strokeColor="#000000"
        tools:ignore="MissingConstraints"
        tools:text="Insert"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerList"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginStart="-260dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cycle_back_id"/>
</LinearLayout>